# custodes

./: .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt
src/App/: CMakeLists.txt  Main.cpp
src/ClientService/: CMakeLists.txt  ClientService.cpp  ClientService.h
